# lolbunny

./: Cargo.toml  LICENSE  Makefile.toml  README.md  Rocket.toml  build.sh  deploy.jenkinsfile  repo.cfg
src/: common.rs  data.rs  main.rs  opensearch.xml
