[package]
name = "lolbunny"
version = "0.1.0"
authors = ["Andi Chalfant <achalfant@indeed.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "*", features = ["tls"] }
phf = { version = "*", features = ["macros"] }
percent-encoding = "2.1.0"
log = "*"
lazy_static = "1.4.0"
