[package]
name = "lolbunny"
version = "0.1.0"
authors = ["Zoë Chalfant <zoe@chlfnt.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
log = "*"
percent-encoding = "*"
phf = { version = "*", features = ["macros"] }
ring = "0.16.19"
rocket = { version = "*", features = ["tls"] }
